package edu.hitsz.observer;

public interface Observer  {
    public   void update();

}
