@startuml
'https://plantuml.com/sequence-diagram

interface Observer  {
    + update:void
}

class EnermyObserver {
    - abstractAircraft:AbstractAircraft
    + EnermyObserver(AbstractAircraft abstractAircraft)
    + update():void
}

Observer  <|.. EnermyObserver

class BulletsEnermyObserver implements Observer {
    - baseBullet:BaseBullet
    + BulletsEnermyObserver(BaseBullet baseBullet)
    + update():void
}

Observer  <|.. BulletsEnermyObserver

class BombSupply
{
    - {final} bombObserverlist:List<Observer>
    + BombSupply(int locationX, int locationY, int speedX, int speedY)
    + addObserver(Observer observer):void
    + removeObserver(Observer observer):void
    + notifyAllObserver():void
}
BombSupply o--> Observer
@enduml